database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/ecohack-networkgroup-backend: "true"
        io.kompose.service: database
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: db
            - name: POSTGRES_PASSWORD
              value: postgres
          image: postgres
          livenessProbe:
            exec:
              command:
                - pg_isready
            failureThreshold: 20
            periodSeconds: 3
            timeoutSeconds: 1
          name: database
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
